css/main.css
body, h1, h2, h3, h4, h5, h6, p {
	font-family: 'Oswald';
}

header {
	background-color: #888;
	color: #fff;
	text-transform: uppercase;
}

.top-img {
	padding-top: 30px;
}

header .main-title {
	font-size: 30px;
	max-width: 910px;
	margin-left: auto;
	margin-right: auto;
}

.nav-style {
	padding: 0;
}

.navbar-style {
	margin: 0;
	min-height: 0;
}

.navbar-header-style {
	border-bottom: 1px solid #fff;
}


.navigation	ul li a {
	color: #000;
	text-transform: uppercase;
	padding: 2.5px 0;
	margin-bottom: 0;
	font-size: 1.4em;
	font-weight: 800;
	text-align: left;
}

.navbar-toggle-style {
	background-color: transparent;
	border: 1px solid #333;
	position: relative;
	z-index: 1;
}

.icon-bar-style {
	color: #333;
	position: relative;
	z-index: 9999;
	border: 1px outset #333;
	border-radius: 1px;
}

.hero-img {
	background-image: url('../img/hero.png');
	background-position: center top;
	background-repeat: no-repeat;
	min-height: 350px;
	margin-bottom: 0;
	margin-top: -1px;
}

.center-column {
	padding-bottom: 80px;
	box-shadow:
        inset 30px 0 40px -30px #333,
        inset -30px 0 40px -30px #333;
}

.twitter a img {
	width: 20px;
}

.btn-nobg {
	background-image: none;
	margin: 5px 0px;
	text-align: left;
	font-size: large;
	padding-top: 7px;
	background-color: #888;
	color: #fff;
	opacity: 1;
	position: relative;
	z-index: 99999;
}

.btn-nobg:hover {
	opacity: .5;
	color: #fff;
}

.btn-nobg img {
	width: 40px;
}

.desc {
	margin: 0;
	padding: 0;
}

.desc .column-article-title {
	margin-top: 0;
}

.thanks-img {
	margin-top: 30px;
}

.twitter-timeline {
	width: 100% !important;
}

.col3 h4 {
	margin-bottom: 25px;
}

footer {
	height: 150px;
	background-color: #888;
	color: #fff;
}

footer nav ul li a {
	margin-top: 20px;
	color: #fff;
	font-weight: 300;
}

footer p {
	padding-top: 50px;
	font-weight: 300;
}

@media (max-width: 991px) {
	.center-column {
		box-shadow: none;
	}
	.col1 h3 {
		border-top: 1px solid #fff;
		margin-top: 45px;
	}
	.col1 h4 {
		padding-top: 20px;
	}
	.col2 h3 {
		border-top: 1px solid #000;
		padding-top: 45px;
		margin-top: 45px;
	}
	.col3 h3 {
		border-top: 1px solid #000;
		padding-top: 45px;
		margin-top: 45px;
	}
	.col3 h4 {
		margin-bottom: 30px;
	}
	footer {
		margin-top: 50px;
	}
}

@media (max-width: 767px) {
	.navigation	ul li a {
		padding: 8px 5%;
	}
	.nav-style {
		padding: 15px 0;
	}
	.nav-style li {
		border-top: 1px solid #ddd;
	}
	.navbar-header-style {
		border-bottom: 1px solid #fff;
	}
	/*footer {
		height: 510px;
	}*/
	footer {
		margin-top: 50px;
	}
	footer nav {
		display: none;
	}
}

@media (max-width: 500px) {
	.img-100 {
		width: 100%;
	}
}

